--- a/_notebooks/2022-01-11-eigen.ipynb
+++ b/_notebooks/2022-01-11-eigen.ipynb
@@ -2710,49 +2710,111 @@
    "cell_type": "markdown",
    "id": "ac8a7f41-44f8-46c7-834d-64f5397772a4",
    "metadata": {},
-   "source": []
+   "source": [
+    "These matrices $M^{-1}AM$ all have the same eigenvalues 1 and 0.\n",
+    "$$\\text{The projection  } A = \\begin{bmatrix}{.5}&{.5}\\\\{.5}&{.5}\\end{bmatrix} \\text{ is similar to  }\\Lambda = S^{-1}AS = \\begin{bmatrix}{1}&{0}\\\\{0}&{0}\\end{bmatrix}$$\n",
+    "$$\\text{Now choose  } M = \\begin{bmatrix}{1}&{0}\\\\{1}&{2}\\end{bmatrix} \\text{. The similar matrix  } M^{-1}AM \\text{ is } \\begin{bmatrix}{1}&{1}\\\\{0}&{0}\\end{bmatrix}$$\n",
+    "$$\\text{Also choose  } M = \\begin{bmatrix}{0}&{-1}\\\\{1}&{0}\\end{bmatrix} \\text{. The similar matrix  } M^{-1}AM \\text{ is } \\begin{bmatrix}{.5}&{-.5}\\\\{-.5}&{.5}\\end{bmatrix}$$"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "98fb359d-36a3-4d69-9945-0ff8531082a1",
    "metadata": {},
-   "source": []
+   "source": [
+    "- 고유값 1,0을 가진 모든 2 * 2 행렬은 서로 유사하다.\n",
+    "- 고유 벡터는 M에 의해 변하고, 고유값은 변하지 않는다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9eb8dcdf-9f64-4848-a34f-df0d91ea08f0",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "13459456-a99f-470c-86a8-abbd4037a7e4",
    "metadata": {},
-   "source": []
+   "source": [
+    "##### ex2)"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "85201164-246e-41de-914d-5c11673ae7e9",
    "metadata": {},
-   "source": []
+   "source": [
+    "**The zero matrix shares those eigenvalues, but it is similar only to itself: $M^{-1}0M = 0$.**"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "eadb6951-6d4f-48e0-a467-0bedfe5113f8",
    "metadata": {},
-   "source": []
+   "source": [
+    "A family of similar matrices with A = 0, 0 (repeated eigenvalue) \n",
+    "$$A=\\begin{bmatrix}{0}&{-1}\\\\{0}&{0}\\end{bmatrix} \\text{ is similar to }\\begin{bmatrix}{1}&{-1}\\\\{1}&{-1}\\end{bmatrix}\\text{ and all }B=\\begin{bmatrix}{cd}&{d^2}\\\\{-c^2}&{-cd}\\end{bmatrix} \\text{ except } \\begin{bmatrix}{0}&{0}\\\\{0}&{0}\\end{bmatrix}$$\n",
+    "- 이 매트릭스 B는 모두 0 determinant(A와 같은)를 가지고 있다.\n",
+    "- 모두 A와 같이 rank one을 가지고 있다.\n",
+    "- 한 고유값은 0이고, trace는 cd-dc=0이어서 다른 고유값도 0이어야 한다,"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "6d44aec2-5333-42ff-a525-fe0215367873",
    "metadata": {},
-   "source": []
+   "source": [
+    "$$M=\\begin{bmatrix}{a}&{b}\\\\{c}&{d}\\end{bmatrix}\\text{ with } ad-bc=1,\\text{, and }B=M^{-1}AM$$\n",
+    "- 행렬 B는 대각화할 수 없다.\n",
+    "- A는 가능한한 대각화에 가깝게 해야한다.\n",
+    "- 이건 행렬 B의 family에 대한 조르단 형식Jordan form이다.\n",
+    "- 오직 한 고유벡터만 있을때, Jordan form J=A는 이 행렬을 대각화할만큼 근접하다.\n",
+    "- $A$에서 $B=M^{-1}AM$에 가는동안 어떤 것은 변하고 어떤 것은 변하지 않는다.\n",
+    "    - 변하는 것: Eigenvectors, Nullspace , Column space , Row space , Left nullspace , Singular values \n",
+    "    - 변하지 않는 것: Eigenvalues , Trace and determinant , Rank , Number of independent eigenvectors , Jordan form \n",
+    "- 고유값과 고유벡터는 유사한 메트릭스에서 변하지 않는다.\n",
+    "- trace는 변하지 않는 고유값들의 합이다.\n",
+    "- determinanat는 같은 고유값들의 곱이다.\n",
+    "- nullspace는 고유값이 0인게 하나라도 존재하는 고유벡터로 구성되어 있어서 변할 수 있다.\n",
+    "- 이 차원은 n-r이고, 변하지 않는다!\n",
+    "- 벡터들이 스스로 $M^{-1}$에 곱해지는 동안 고유벡터는 각 고유값에서 같다.\n",
+    "- singular 값은 $A^TA$에 의존하고, 명확하게 변한다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7e1407f-ba38-47b0-b8d3-848ccb313b9a",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "85d91a1e-ced2-4270-8b0f-3416a8153462",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### Examples of the Jordan Form"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "c8c3bbe3-11c0-4edc-b5e4-5b70a26b3e9c",
    "metadata": {},
-   "source": []
+   "source": [
+    "We lead up to it with one more example of similar matrices: triple eigenvalue, one eigenvector. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96faa190-d33c-4b7b-983d-c597e84236cb",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
   },
   {
    "cell_type": "markdown",
