--- a/_notebooks/2022-01-11-eigen.ipynb
+++ b/_notebooks/2022-01-11-eigen.ipynb
@@ -2820,67 +2820,147 @@
    "cell_type": "markdown",
    "id": "331f6886-b4a3-49bd-b546-f451635c1730",
    "metadata": {},
-   "source": []
+   "source": [
+    "##### ex3)"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "fcf122cf-e97a-4837-b389-ab3c1336d018",
    "metadata": {},
-   "source": []
+   "source": [
+    "This Jordan matrix $J$ has $\\lambda = 5,5,5$ on its diagonal. Its only eigenvectors are multiples of $x = (1,0,0)$. Algebraic mUltiplicity is 3, geometric multiplicity is 1: \n",
+    "$$\\text{If }J=\\begin{bmatrix}{5}&{1}&{0}\\\\{0}&{5}&{1}\\\\{0}&{0}&{5}\\end{bmatrix} \\text{ then } J-5I=\\begin{bmatrix}{0}&{1}&{0}\\\\{0}&{0}&{1}\\\\{0}&{0}&{0}\\end{bmatrix} \\text{ has rank 2}$$\n",
+    "- 모든 유사한 행렬 $B=M^{-1}JM$ 은 같은 세 고유값 5,5,5를 가지고 있다.\n",
+    "- 또한, $B-5I$는 같은 rank 2를 가져야만 한다.\n",
+    "- nullspace는 차원1을 가지고 있다.\n",
+    "- Jordan block인 J와 규사한 모든 B는 유일한 하나의 독립적인 고유벡터 $M^{-1}x$를 가지고 있다."
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "a531327b-039b-4b8a-a84b-aa97c9d4330a",
    "metadata": {},
-   "source": []
+   "source": [
+    "Jordan's theorem에서는 $J^t$가 $J$와 유사하다고 말한다. 유사함을 제공하는 행렬 M은 reverse identity가 된다.\n",
+    "$$J^T=M^{-1}JM\\text{ is } \\begin{bmatrix}{5}&{0}&{0}\\\\{1}&{5}&{0}\\\\{0}&{1}&{5}\\end{bmatrix} = \\begin{bmatrix}{}&{}&{1}\\\\{}&{1}&{}\\\\{1}&{}&{}\\end{bmatrix} \\begin{bmatrix}{5}&{1}&{0}\\\\{0}&{5}&{1}\\\\{0}&{0}&{5}\\end{bmatrix} \\begin{bmatrix}{}&{}&{1}\\\\{}&{1}&{}\\\\{1}&{}&{}\\end{bmatrix}$$\n",
+    "- 모든 빈 entries는 0이다.\n",
+    "- $J^T$의 고유백터는 $M^{-1}(1,0,0)=(0,0,1)$이다.\n",
+    "- J에서 고유벡터 one line $(x_1,0,0)$과 $J^T$에서 another line $(0,0,x_3)$이 있다."
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "6bb50b80-f646-4c9b-a3a3-70ebad5e7463",
    "metadata": {},
-   "source": []
+   "source": [
+    "The key fact is that this matrix $J$ is similar to every matrix $A$ with eigenvalues 5,5,5 and one line of eigenvectors.\n",
+    "\n",
+    "There is an $M$ with $^{-1}AM = J$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1591ade-94c3-4ab1-be1c-ca9dcc2574aa",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "8358baca-c60a-4982-99f5-989eb40e6aa1",
    "metadata": {},
-   "source": []
+   "source": [
+    "##### ex4)"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "33a1d9cd-4b38-4158-b145-c5e5a0f0d30b",
    "metadata": {},
-   "source": []
+   "source": [
+    "Since $J$ is as close to diagonal as we can get, the equation $\\frac{du}{dt} = J u$ cannot be simplified by changing variables. We must solve it as it stands:\n",
+    "$$\\frac{du}{dt}=Ju=\\begin{bmatrix}{5}&{1}&{0}\\\\{0}&{5}&{1}\\\\{0}&{0}&{5}\\end{bmatrix}\\begin{bmatrix}{x}\\\\{y}\\\\{z}\\end{bmatrix} \\text{ is } \\begin{matrix}{dx/dt=5x+y}\\\\{dy/dt=5y+z}\\\\{dz/dt=5z}\\end{matrix}$$\n",
+    "- system은 triangular이다.\n",
+    "$$\\text{Last equation }\\frac{dz}{dt}=5z \\text{yields } z=z(0)e^{5t}$$\n",
+    "$$\\text{Notice }te^{5t}\\text{   }\\frac{dy}{dt}=5y+z \\text{yields } y=(y(0)+tz(0))e^{5t}$$\n",
+    "$$\\text{Notice }t^2e^{5t}\\text{   }\\frac{dx}{dt}=5x+y \\text{yields } x=(x(0)+ty(0)+\\frac{1}{2}t^2z(0))e^{5t}$$\n",
+    "- The two missing eigenvectors are responsible for the teSt and t 2eSt terms in y and x.\n",
+    "- The factors t and t 2 enter because A = 5 is a triple eigenvalue with one eigenvector. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2439162b-2a98-4f79-8d3e-98467361d62f",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "0608c3cc-9f7f-4322-b0b0-494b49f11fa8",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### The Jordan Form"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "5550260b-e986-474e-89c2-546d2463c5f2",
    "metadata": {},
-   "source": []
+   "source": [
+    "- 모든 A에 대해 우리는 M을 선택해서 $M^{-1}AM$이 가능한한 대각화에 근접하기를 원한다.\n",
+    "- A가 n개 고유벡터들의 전체 집합일때, M의 열들이 고유벡터가 된다.(When A has a full set of n eigenvectQrs, they go. into. the cQlumns Qf M. )\n",
+    "- 그러면 M=S가 된다.\n",
+    "- 행렬 $S^{-1}AS$는 대각화되어 있다.\n",
+    "- 행렬 $\\Lambda$는 A의 조르단 형식이다.(A가 대각화될 수 있다면.)\n",
+    "- 일반적으로 고유벡터는 결측이고, 고유값 집합은 얻을 수 없다(In the general case, eigenvectors are missing and A can't be reached. )."
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "28add665-74ed-4702-bd2b-d247df1ce439",
    "metadata": {},
-   "source": []
+   "source": [
+    "**(Jordan form) If A has s independent elegevectors, it is similar to a matrix $J$ that has s Jordan blocks on its diagonal: Some matrix M plus A into Jordan form:**\n",
+    "$$\\text{Jordan form    }M^{-1}AM=\\begin{bmatrix}{J_1}&{}&{}\\\\{}&{\\ddots}&{}\\\\{}&{}&{J_s}\\end{bmatrix}=J$$\n",
+    "-  J에서 각 block은 하나의 고유값 람다, 고유벡터, 그리고 위 대ㅏㄱ에서 1들을 가지고 있다.\n",
+    "$$\\text{Jordan block   }J_i=\\begin{bmatrix}{\\lambda_i}&{1}{}&{}\\\\{}&{\\cdot}&{\\cdot}&{}\\\\{}&{}&{\\cdot}&{1}\\\\{}&{}&{}&{\\lambda_i}\\end{bmatrix}$$\n",
+    "- 만일 같은 jordan form J를 가지고 있다면, A는 B와 유사하다."
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "1f7f18d0-f44e-48bd-8b05-19746bf1c1a9",
    "metadata": {},
-   "source": []
+   "source": [
+    "- Jordam form J는 결측 고유벡터에 대해 off-diagonal 1을 가지고 있다.\n",
+    "- 이는 행렬 유사성에 대한 big theotem이다.\n",
+    "- 유사한 행렬의 모든 family에서 J라고 불리는 특정 member를 선택한다,\n",
+    "- 그건 대각화와 근사하다.\n",
+    "- J에 대해 du/dt=Ju를 ex4에서 풀 수 있었다.\n",
+    "- family에서 모두 다른 행렬은 form $A=MJM^{-1}$을 가지고 있다.\n",
+    "- M을 통한 연결은 du/dt=Au를 해결한다.\n",
+    "- $MJM^{-1}MJM^{-1}=MJ^2M^{-1}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "763f20cc-d8f0-4198-ab62-805c6c73334e",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "4900fe97-d1b2-4a51-bd8e-09632f3cd513",
    "metadata": {},
-   "source": []
+   "source": [
+    "**REVIEW OF THE KEY IDEAS**"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2890,9 +2970,19 @@
   },
   {
    "cell_type": "markdown",
+   "id": "88f96516-4879-420e-9810-29d222829472",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "679baa86-2279-47b9-b0a3-e88629d4f0b5",
    "metadata": {},
-   "source": []
+   "source": [
+    "**WORKED EXAMPLES**"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2902,13 +2992,317 @@
   },
   {
    "cell_type": "markdown",
+   "id": "819a9bfd-b687-42bb-8e56-66947dc63cd1",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "73007bc1-889a-4237-b7c6-970626ab9651",
+   "metadata": {},
+   "source": [
+    "**Problem Set 6.6**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86d869fa-8848-4e7b-920c-6338287ec9a5",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "86d869fa-8848-4e7b-920c-6338287ec9a5",
+   "id": "b022e9d5-0834-4b42-a63b-be5c08cc1b98",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2eaa3237-d636-4d58-aadc-c611fb5fe405",
+   "metadata": {},
+   "source": [
+    "**Challenge ProblemsS**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e15ae96-b7c9-4226-a93c-fd5c7aa46dba",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b81ab3c3-6248-4e23-a66a-9cbafa384308",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79abb33b-5d16-4425-ae66-d310e18a504f",
+   "metadata": {},
+   "source": [
+    "### 6.7 Singular Value Decomposition (SVD)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47bde7e6-9482-458d-833d-1282114a368d",
+   "metadata": {},
+   "source": [
+    "A is any m by n matrix, square or rectangular. Its rank is r. We will diagonalize this $A$, but not by $S^{-1} AS$.\n",
+    "- 고유벡터 s는 3개지 큰 문제가 있다.\n",
+    "    - 항상 직교가 아니며\n",
+    "    - 항상 충분한 고유벡터를 가지고 있지 않으며,\n",
+    "    - $Ax=\\lambda x$는 A가 squre이기를 원한다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3ed78a2-46c1-4d39-9a0c-7a0558c3a8ee",
+   "metadata": {},
+   "source": [
+    "The $u$'s are eigenvectors of $AA^T$ and the $v$'s are eigenvectors of $A^T A$. \n",
+    "- 행렬이 둘 다 대칭이기 때문에 이 고유벡터들은 직교로 선택될 수 있다.\n",
+    "- In equation (13) below, the simple fact that $A$ times $A^T A$ is the same as $AA^T$ will lead to a remarkable property of these u's and v's:\n",
+    "$$\\text{\"A is diagonalized\"   } Av_1=\\sigma_1u_1\\text{  } Av_2=\\sigma_2u_2\\text{   }\\dots Av_r=\\sigma_r u_r$$\n",
+    "- The singular vectors $v_1, ... , v_r$ are in the row space of $A$.\n",
+    "- The outputs $u_1 , ... , u_r$ are in the column space of $A$. \n",
+    "- The singular values $\\sigma_1\\dots \\sigma_r$ are all positice numbers\n",
+    "- When the v'S and u's go into the columns of V and U, orthogonality gives $V^T V = I$ and $U^T U = I$.\n",
+    "- The $\\sigma$'s go into a diagonal matrix $\\sum$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11fbb79f-8525-48bd-b6bc-b17a0998a18d",
+   "metadata": {},
+   "source": [
+    "$Ax_i=\\lambda_i x_i$가 대각 $AS=A\\Lambda$로 이끌기 떄문에, 방정식 $Av_i=\\sigma_i u_i$는 $AV=U\\sum$에서 column by column이라 말한다.\n",
+    "$$\\begin{matrix} { \\text{(m by n)(n by r)}} \\\\{\\text{equals}}\\\\{\\text{(m by r)(r by r)}}\\end{matrix} A\\begin{bmatrix}{}\\\\{v_1,\\dots v_r}\\\\{}\\end{bmatrix}= \\begin{bmatrix}{}\\\\{u_1\\dots u_r}\\\\{}\\end{bmatrix} \\begin{bmatrix}{\\sigma_1}&{}&{}\\\\{}&{\\ddots}&{}\\\\{}&{}&{\\sigma_r}\\end{bmatrix}$$\n",
+    "- v와 u는 A의 행과 열 공간을 차지하기도 함\n",
+    "- nullspace N(A)와 왼쪽 nullspace$N(A^T)$로부터 더 많은 v를 위해 n-r이 필요하고, u를 위해 m-r이 필요하다.\n",
+    "    - 두 공간이 직교가 된다면 자동적으로 v들과 u들은 직교가 된다.\n",
+    "- 그래서 행렬은 squre가 되고, $AV=U\\sum$을 얻게 된다.\n",
+    "$$\\begin{matrix} { \\text{(m by n)(n by n)}} \\\\{\\text{equals}}\\\\{\\text{(m by m)(m by n)}}\\end{matrix} A\\begin{bmatrix}{}\\\\{v_1,\\dots v_r \\dots v_n}\\\\{}\\end{bmatrix}= \\begin{bmatrix}{}\\\\{u_1\\dots u_r \\dots u_m}\\\\{}\\end{bmatrix} \\begin{bmatrix}{\\sigma_1}&{}&{}&{}\\\\{}&{\\ddots}&{}&{}\\\\{}&{}&{\\sigma_r}&{}\\\\{}&{}&{}&{}\\end{bmatrix}$$\n",
+    "- 새로운 $\\sum$은 m by n 행렬\n",
+    "- m-r개의 새로운 0행과 n-r개의 새로운 0 행을 가진 기존의 r * r 행렬이다.\n",
+    "- $V^TV=I$dhk $U^TU=I$는 유지되고,크기는  n과 m이다.\n",
+    "- V는 이제 $V^{-1}=V^T$인 직각 직교 행렬이다. \n",
+    "- $AV=U\\sum$은 $A=U\\sum V^T$가 될 수 있다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e2313c50-11e0-40b4-b957-787279f17a6c",
+   "metadata": {},
+   "source": [
+    "Singular Value Decomposition:\n",
+    "$$\\text{SVD  } A=U\\sum V^T = u_1\\sigma_1 v^{T}_{1}+\\dots+u_r\\sigma_r v^{T}_{r}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51c753c2-f945-4e7e-842b-44a8035f915e",
+   "metadata": {},
+   "source": [
+    "This reduced SVD gives the same splitting of A into a sum of r matrices, each of rank one. \n",
+    "\n",
+    "\n",
+    "We will see that $\\sigma^{2}_{i}$ is an eigenvalue of $A^T A$ and also $AA^T$. When we put the singular values in descending order, $\\sigma_1 > \\sigma_2 > ... \\sigma_r > 0$, the splitting in equation (4) gives the r rank -one pieces of A **in order of importance**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b062893-79a9-45e2-8ebb-ed650b6a2d36",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1945fd9b-c74f-4c5e-a2e0-ea4244ab198a",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "##### ex1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "28e07b72-f3a8-4801-ada5-889dd28c7ab2",
+   "metadata": {},
+   "source": [
+    "When is $U\\sum V^T$ (singular values) the same as $\\Lambda AS^{-1}$ (eigenvalues)?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67eeeed5-ac8b-4853-ae2f-5176e389017d",
+   "metadata": {},
+   "source": [
+    "solution\n",
+    "- S=U에서 직교 고유벡터가 필요하다. $\\Lambda= \\sum$에서 음수가 아닌 고유값들이 필요하다.\n",
+    "- A는 **positive semidefinite (or definite) symmetric matrix** $Q\\Lambda Q^T$여야 한다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a01c76a-8f1b-478e-89bb-e7ff3faf8221",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf4e8865-b270-476c-8b93-3ce7a808a2d9",
+   "metadata": {},
+   "source": [
+    "##### ex2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d680ecd-0508-4fb5-bf6b-cd2f5f565bbe",
+   "metadata": {},
+   "source": [
+    "If $A = xy^T$ with unit vectors $x$ and $y$, what is the SVD of A?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5617a4d4-f1d6-4dbb-a1a4-ddfa46ce19e9",
+   "metadata": {},
+   "source": [
+    "solution\n",
+    "- 기존 $\\sum$있는 식에서 감소한 SVD는 rank=1을 가진 $xy^T$이지.\n",
+    "- 이건 $u_1=x$, $v_1=y$, $\\sigma_1=1$를 가져.\n",
+    "- 전체 SVD에서 $u_1=x$를 u의 직교 basis에서 complete하고, v의 직교 basis에서 $v_1=y$로 coplete해.(For the full SVD, complete $u_l = x$ to an orthonormal basis of u's, and complete $v_1 = y$ to an orthonormal basis of v's. No new O\"s. )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90f89e9b-5687-4c4c-9024-e9db23a89119",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8440c72c-efac-4b42-b023-72b4af138e52",
+   "metadata": {},
+   "source": [
+    "#### Image Compression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd357f02-befb-49f3-b4e4-a45347824087",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c91a8dae-9324-4cee-9706-bbc367e25a8f",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9dc5ae09-834a-476f-a2f8-99d3d2632d22",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "730b65fa-737e-40c2-bf7f-d2aad653ca2d",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f4d9d095-faaf-4818-89a3-34cf172b3fbd",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76afe811-be1f-491a-a750-b302bb56bea2",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "456378ea-71dd-4c05-b9c9-bb39158a263e",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "674f9ff8-fd85-4ef9-a588-a180bde6eb93",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c59ef7d-2f62-49c7-b037-512e2e1c881b",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8f1c40e-188a-4fc7-b186-62e121a02e34",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9de5e86e-3cbd-4389-bd92-3ed3f51018b9",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb72e7f7-2514-4f08-bc49-ccc85a128bfe",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3563569e-47e2-460f-9eb2-f2f9fa2d8445",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99293829-2520-4d8e-8619-5ad8beea0118",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dcc7a486-e5ee-4f2d-b907-b42da776e3e1",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "455aa952-09da-4493-bf0b-8256b1dbabfd",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79062243-275c-4c07-9d25-50d7800cba6a",
    "metadata": {},
    "source": []
   },
