--- a/_notebooks/2022-01-11-eigen.ipynb
+++ b/_notebooks/2022-01-11-eigen.ipynb
@@ -3056,7 +3056,8 @@
    "metadata": {},
    "source": [
     "A is any m by n matrix, square or rectangular. Its rank is r. We will diagonalize this $A$, but not by $S^{-1} AS$.\n",
-    "- 고유벡터 s는 3개지 큰 문제가 있다.\n",
+    "- 특이값 분해\n",
+    "- 고유벡터 s는 3가지 큰 문제가 있다.\n",
     "    - 항상 직교가 아니며\n",
     "    - 항상 충분한 고유벡터를 가지고 있지 않으며,\n",
     "    - $Ax=\\lambda x$는 A가 squre이기를 원한다."
@@ -3208,97 +3209,316 @@
    "cell_type": "markdown",
    "id": "cd357f02-befb-49f3-b4e4-a45347824087",
    "metadata": {},
-   "source": []
+   "source": [
+    "What is compression?\n",
+    "- We want to replace those 217 matrix entries by a smaller number, without losing picture quality\n",
+    "\n",
+    "\n",
+    "try an SVD approach: Replace the 256 by 512 pixel matrix by a matrix of rank one: a column times a row. If this is successful, the storage requirement becomes 256 + 512 (add instead of multiply). The compression ratio (256)(512)/(256 + 512) is better than \n",
+    "170 to 1. This is more than we hope for. We may actually use five matrices of rank one (so a matrix approximation of rank 5). The compression is still 34 : 1 and the crucial question is the picture quality. "
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "c91a8dae-9324-4cee-9706-bbc367e25a8f",
    "metadata": {},
-   "source": []
+   "source": [
+    "Where does the SVD come in? The best rank one approximation to A is the matrix $\\sigma_1 u_1 v_{1}^{T}$. It uses the largest singular value $\\sigma_1$. The best rank 5 approximation includes also $\\sigma_2 u_2 v_{2}^{T} + ... + \\sigma_5 u_5 v_{5}^{T}$, **The SVD puts the pieces of A in descending order.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "386b9651-f61b-404a-8fb0-2041d14da977",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "9dc5ae09-834a-476f-a2f8-99d3d2632d22",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### The Bases and the SVD "
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "730b65fa-737e-40c2-bf7f-d2aad653ca2d",
    "metadata": {},
-   "source": []
+   "source": [
+    "- Start with a 2 by 2 matrix. Let its rank be r = 2, so A is invertible. \n",
+    "- We want $v_1$ and $v_2$ to be perpendicular unit vectors. \n",
+    "- We also want $Av_1$ and $Av_2$ to be perpendicular.\n",
+    "- Then the unit vectors $U_l = Av_1/||Av_1||$ and $u_2 = Av_2/||Av_2||$  will be orthonormal.\n",
+    "$$\\text{Unsysmmetric matrix   }A=\\begin{bmatrix}{2}&{2}\\\\{-1}&{1}\\end{bmatrix}$$\n",
+    "\n",
+    "\n",
+    "- No orthogonal matrix $Q$ will make $Q^{-l} AQ$ diagonal.\n",
+    "- We need $U^{-1} AV$.\n",
+    "- The two bases will be different-one basis cannot do it. \n",
+    "- The output is $Av_1 = \\sigma_1 u_1$ when the input is $v_1$. \n",
+    "- The \"singular values\" $\\sigma_1$ and $\\sigma_2$ are the lengths $||Av_1||$ and $||Av_2||$.\n",
+    "$$\\begin{matrix}{AV=U\\sum}\\\\{A=U\\sum V^T}\\end{matrix}\\text{     } A\\begin{bmatrix}{v_1} &{v_2}\\end{bmatrix}=\\begin{bmatrix}{\\sigma_1u_1}&{\\sigma_2u_2}\\end{bmatrix}=\\begin{bmatrix}{u_1}&{u_2}\\end{bmatrix}\\begin{bmatrix}{\\sigma_1}&{}\\\\{}&{\\sigma_2}\\end{bmatrix}$$\n",
+    "\n",
+    "$$A^T A=(U\\sum V^T)^T (U\\sum V^T)=V\\sum {}^T\\sum {V}^T$$\n",
+    "- $U^T U$ disappears because it equals I.\n",
+    "- uT U disappears because it equals I.\n",
+    "- Multiplying those diagonal $\\sum{}^T$ and $\\sum$ gives $\\sigma_{1}^{2}$ and $\\sigma_{2}^{2}$. \n",
+    "- That leaves an ordinary diagonalization of the crucial symmetric matrix $A^T A$, whose eigenvalues are $\\sigma_{1}^{2}$ and $\\sigma_{2}^{2}$: \n",
+    "$$\\begin{matrix}{\\text{Eigenvalues }\\sigma_{1}^{2}, \\sigma_{2}^{2}}\\\\{\\text{Eigenvectors }v_1, v_2}\\end{matrix} \\text{   }A^T A=V\\begin{bmatrix}{\\sigma_{1}^{2}}&{0}\\\\{0}&{\\sigma_{2}^{2}}\\end{bmatrix}V^T$$\n",
+    "- 이건 $A=Q\\Lambda Q^T$와 같아\n",
+    "- 하지만 대칭 행렬은 A itself가 아니지\n",
+    "- 이제 대칭 행렬은 $A^T A$야\n",
+    "- 그리고 V의 열들은 $A^TA$의 고유벡터이고. Last is $U$..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7635f685-8005-40e8-8309-3980a4be09d5",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "f4d9d095-faaf-4818-89a3-34cf172b3fbd",
    "metadata": {},
-   "source": []
+   "source": [
+    "##### ex3)"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "76afe811-be1f-491a-a750-b302bb56bea2",
    "metadata": {},
-   "source": []
+   "source": [
+    "Find the singular value decomposition of that matrix $A=\\begin{bmatrix}{2}&{2}\\\\{-1}&{1}\\end{bmatrix}$"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "456378ea-71dd-4c05-b9c9-bb39158a263e",
    "metadata": {},
-   "source": []
+   "source": [
+    "Solution\n",
+    "- $A^TA$와 그 고유벡터를 계산하자\n",
+    "- 그러면 unit vector가 나와\n",
+    "$$A^TA=\\begin{bmatrix}{5}&{3}\\\\{3}&{5}\\end{bmatrix}\\text{ has unit eigenvectors }v_1=\\begin{bmatrix}{1/\\sqrt{2}}\\\\{1/\\sqrt{2}}\\end{bmatrix} \\text{ and } v_2=\\begin{bmatrix}{-1/\\sqrt{2}}\\\\{1/\\sqrt{2}}\\end{bmatrix}$$\n",
+    "- $A^TA$의 고유값들은 8하고 2임\n",
+    "- v들은 직교야. 왜냐하면 모든 대칭 행렬의 고유 벡터는 직교이기 떄문이지!\n",
+    "- 그리고 $A^TA$는 자동적으로 대칭이 돼\n",
+    "$$Av_1=\\begin{bmatrix}{2}&{2}\\\\{-1}&{1}\\end{bmatrix}\\begin{bmatrix}{1/\\sqrt{2}}\\\\{1/\\sqrt{2}}\\end{bmatrix}=\\begin{bmatrix}{2\\sqrt{2}}\\\\{0}\\end{bmatrix}\\text{. The unit vector is } u_1=\\begin{bmatrix}{1}\\\\{0}\\end{bmatrix} $$\n",
+    "- $Av_1$은 $2\\sqrt{2} u_1$과 같지\n",
+    "- 처음 특이값singular value는 $\\sigma_1 = 2\\sqrt{2}$임. 그러면 $\\sigma_{1}^{2}=8$이 돼.\n",
+    "$$Av_2=\\begin{bmatrix}{2}&{2}\\\\{-1}&{1}\\end{bmatrix}\\begin{bmatrix}{-1/\\sqrt{2}}\\\\{1/\\sqrt{2}}\\end{bmatrix}=\\begin{bmatrix}{0}\\\\{\\sqrt{2}}\\end{bmatrix}\\text{. The unit vector is } u_2=\\begin{bmatrix}{0}\\\\{1}\\end{bmatrix} $$\n",
+    "- $Av_2$는 $\\sqrt{2}u_2$이고 $]sigma_2=\\sqrt{2}$임.\n",
+    "- 그러면 $\\sigma_{2}^{2}$는 $A^T A$의 다른 고유값 2에 agree 하지...\n",
+    "$$A=U\\sum V^T \\text{ is }\\begin{bmatrix}{2}&{2}\\\\{-1}&{1}\\end{bmatrix}=\\begin{bmatrix}{1}&{0}\\\\{0}&{1}\\end{bmatrix}\\begin{bmatrix}{2\\sqrt{2}}&{}\\\\{}&{\\sqrt{2}}\\end{bmatrix}\\begin{bmatrix}{1/\\sqrt{2}}&{1/\\sqrt{2}}\\\\{-1/\\sqrt{2}}&{1/\\sqrt{2}}\\end{bmatrix}$$\n",
+    "- 이 행렬과 모든 역을 취할 수 있는 2 * 2 행렬은 단위 원을 타원으로 변환한다!"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "674f9ff8-fd85-4ef9-a588-a180bde6eb93",
    "metadata": {},
-   "source": []
+   "source": [
+    "We found the u's from the v's. Could we find the u's directly? Yes, by multiplying $AA^T$ instead of $A^T A$:\n",
+    "$$\\text{Diagonal in this example   } A A^T = \\begin{bmatrix}{2}&{2}\\\\{-1}&{1}\\end{bmatrix}\\begin{bmatrix}{2}&{-1}\\\\{2}&{1}\\end{bmatrix}= \\begin{bmatrix}{8}&{0}\\\\{0}&{2}\\end{bmatrix}$$\n",
+    "- 이 고유벡터 (1,0)과 (0,1)은 $u_1,u_2$를 빨리 찾을 수 있게 하지!\n",
+    "- 왜 처음 고유벡터가 (-1,0)이나(0,1) 대신에 (1,0)이 될까?\n",
+    "- 우리는 $Av_1$를 따라야 하기 때문이지!\n",
+    "- $AA^T$는 $A^TA$와 같은 고유값 8,2를 가져\n",
+    "- 그 특이값은 $\\sqrt{8},\\sqrt{2}$야"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "6c59ef7d-2f62-49c7-b037-512e2e1c881b",
+   "id": "36832210-cf1a-49fd-a5c5-c4e71876f51b",
    "metadata": {},
-   "source": []
+   "source": [
+    "-----------------------"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "d8f1c40e-188a-4fc7-b186-62e121a02e34",
    "metadata": {},
-   "source": []
+   "source": [
+    "##### ex4)"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "9de5e86e-3cbd-4389-bd92-3ed3f51018b9",
    "metadata": {},
-   "source": []
+   "source": [
+    "Find the SVD of the singular matrix $A = \\begin{bmatrix}{2}&{2}\\\\{1}&{1}\\end{bmatrix}$. The rank is r = 1."
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "bb72e7f7-2514-4f08-bc49-ccc85a128bfe",
    "metadata": {},
-   "source": []
+   "source": [
+    "Solution\n",
+    "- 행 공간은 오직 한 basis 벡터 $v_1=(1,1)/\\sqrt{2}$를 가지고 있지.\n",
+    "- 그 열 공간은 오직 한 basis 벡터 $u_1=(2,1)/\\sqrt{5}$를 가지고 있고.\n",
+    "- 그러면 $Av_1=(4,2)/\\sqrt{2}$는 $\\sigma_1 u_1$과 같아야 해.\n",
+    "- 그러면 $\\sigma_1=\\sqrt{10}$"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "3563569e-47e2-460f-9eb2-f2f9fa2d8445",
    "metadata": {},
-   "source": []
+   "source": [
+    "행렬 U와 V는 모든 4개의 준공간에서 직교 기반을 포함한다.\n",
+    "- V의 열에서 첫 r 은 A의 행 공간\n",
+    "- V의 열에서 마지막 n-r은 A의 영공간\n",
+    "- U의 열에서 첫 r은 A의 열공간\n",
+    "- U의 열에서 마지막 n-r은 $A^T$의 영공간\n",
+    "\n",
+    "\n",
+    "The first columns $v_1, ... ,v_r$ and $u_1, ... ,u_r$ are eigenvectors of $A^T A$ and $AA^T$. We now explain why AVi falls in the direction of $u_i$. The last v's and u's (in the nullspaces) are easier. As long as those are orthonormal, the SVD will be correct."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1099b3ba-222f-4a6d-8465-8ddb141ffdf5",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "99293829-2520-4d8e-8619-5ad8beea0118",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### Eigshow (Part 2) "
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "dcc7a486-e5ee-4f2d-b907-b42da776e3e1",
+   "id": "10ada2ba-805f-476e-a0b0-df57f86510ed",
+   "metadata": {},
+   "source": [
+    "Section 6.1 described the MATLAB demo called eigshow."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c90620b9-1c62-46f2-93e5-a7956a4a5c16",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "455aa952-09da-4493-bf0b-8256b1dbabfd",
+   "id": "3f55a8f3-0551-4f22-a575-e6107ff06272",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17de5692-8aa0-49d7-b636-449d7b09ce08",
+   "metadata": {},
+   "source": [
+    "#### Searching the Web"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06c286d6-a628-45b9-bbb3-f4046ba0c26f",
+   "metadata": {},
+   "source": [
+    "Search engines are link-based more than content-based. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f9313317-d349-4d40-aa82-e2b6cab9a2c0",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5718c265-0609-47fb-92a7-e1cd606e3ac1",
+   "metadata": {},
+   "source": [
+    "**REVIEW OF THE KEY IDEAS**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ace7b547-72ca-4d7d-a449-3faf69b122a3",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c43d5914-3f9e-4ab4-b78e-db0b922d0bfb",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d26bda70-3ada-47d8-a145-286beac7ab14",
+   "metadata": {},
+   "source": [
+    "**WORKED EXAMPLES**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d9f2e374-6461-40f0-a4a2-1052e0a62d48",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7235c5a4-d0df-4032-931a-ecf25b41021e",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a1e2794-0d52-447f-bba2-921cdcb18c0e",
+   "metadata": {},
+   "source": [
+    "**Problem Set 6.7**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b16feab2-d67a-40e2-9a1e-1939827e9b1e",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3730c296-c680-4528-b0bd-db292868f761",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91898206-0c01-4e4e-835a-fdc3ffb2122b",
+   "metadata": {},
+   "source": [
+    "**Challenge Problems**"
+   ]
   },
   {
    "cell_type": "markdown",
