--- a/_notebooks/2022-01-11-graph논문.ipynb
+++ b/_notebooks/2022-01-11-graph논문.ipynb
@@ -77,7 +77,10 @@
    "source": [
     "- inferred 유추\n",
     "- ~ of the problem at hand 당면한 문제의~\n",
-    "- inversely 반대로"
+    "- inversely 반대로\n",
+    "\n",
+    "\n",
+    " graph가 domain이다!"
    ]
   },
   {
@@ -520,7 +523,7 @@
    "id": "175ea77e-30ea-4d9c-aedf-0bd8a90d487e",
    "metadata": {},
    "source": [
-    "엣지들의 집합을 ${\\cal E}$라고 표현한다. 따라서 이 예제의 경우 ${\\cal E}=\\{ (1,2), (2,3), (3,4), (4,5), (5,6) \\}$이 된다. "
+    "엣지들의 집합을 ${\\cal E}$라고 표현한다. 따라서 이 예제의 경우 ${\\cal E}=\\{ (1,2), (2,3), (3,4), (4,5) \\}$이 된다. "
    ]
   },
   {
@@ -890,20 +893,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c973cea-5e38-4ff6-b778-de208bccb6a4",
-   "metadata": {},
-   "source": [
-    "##### B. The Non-Normalized Graph Laplacian"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "65b2f1d9-cf57-4983-9ec2-c7a17e3dfa70",
    "metadata": {},
    "source": [
     "The non-normalized graph Laplacian, also called the combinatorial graph Laplacian, is defined as $Ł := D −W$, where the degree matrix $D$ is a diagonal matrix whose $i^{th}$ diagonal element $d_i$ is equal to the sum of the weights of all the edges incident to vertex $i$. The graph Laplacian is a difference operator, as, for any signal $f ∈ R^N$ , it satisfies\n",
     "$$(Łf)(i)=\\sum_{j \\in N_i}W_{i,j}[f(i)-f(j)],$$\n",
     "where the neighborhood $N_i$ is the set of vertices connected to vertex $i$ by an edge. More generally, we denote by $N (i, k)$ the set of vertices connected to vertex $i$ by a path of $k$ or fewer edges."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c973cea-5e38-4ff6-b778-de208bccb6a4",
+   "metadata": {},
+   "source": [
+    "##### B. The Non-Normalized Graph Laplacian"
    ]
   },
   {
@@ -929,7 +932,7 @@
    "metadata": {},
    "source": [
     "직교(orthogonal)와 정규직교(orthonormal), 그리고 직교행렬(orthogonal matrix)\n",
-    "- 직교행렬(orthogonal matrix): 자신의 전치행렬transpose를 역향렬로 갖는 정방행렬, $AA^T=E$\n",
+    "- 직교행렬(orthogonal matrix): 자신의 전치행렬transpose를 역행렬로 갖는 정방행렬, $AA^T=E$\n",
     "    - 직교행렬(orthogonal matrix)의 열벡터들은 서로 othonormal정규직교한 성질을 가지고 있다.\n",
     "    - 즉, 직교 행렬을 구성하는 열벡터(혹은 행벡터)들을 $v_1,v_2,...,v_n$이라 했을때 이들은 모두 단위 벡터unit vector이면서 또한 서로 수직인 성질을 갖는다.\n",
     "    - 따라서 직교행렬othogonal matrix는 그 행렬을 구성하는 열벡터(행벡터)들이 서로 수직이면서orthogonal 크기가 1인normal한 행렬로 정의될 수 있다.\n"
